[table] Fix align

--- a/semcore/data-table/src/style/data-table.shadow.css
+++ b/semcore/data-table/src/style/data-table.shadow.css
@@ -160,7 +160,7 @@ SSortWrapper {
   flex-shrink: 99999;
   position: relative;
   flex-basis: 0;
-  height: calc(1em * 1.25);
+  height: 100%;
   opacity: 0;
   transition: all 0.3s ease;
 }
@@ -181,7 +181,7 @@ SSortIcon {
   display: none;
   fill: var(--intergalactic-icon-secondary-neutral-hover-active, #8a8e9b);
   position: absolute;
-  top: 50%;
+  top: calc(1em * 1.25);
   right: 0;
   transform: translate(0, -50%);
   margin-left: var(--intergalactic-spacing-1x, 4px);
